--- a/recipe-gen-ai/index.html
+++ b/recipe-gen-ai/index.html
@@ -3,18 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>magic-recipe-spark</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Recipe Magic</title>
+    <meta name="description" content="Generate delicious recipes with the power of AI." />
+    <meta name="author" content="Muhammad Mustafa" />
+    <link rel="icon" href="/icon.ico" />
 
-    <meta property="og:title" content="magic-recipe-spark" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
